Migrate DataTreeChangeStreamTest
Use
- DataObjectIdentifier instead of InstanceIdentifier
- Path.of(URI) instead of Paths.get(URI)

Change-Id: I142cea979eea410effce77291170a056d043d7ca
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit bea1752252bf5535ba82cd127cb0445186eab79b)